--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -189,7 +189,7 @@
   position: absolute;
   top: 508px;
   left: 0;
-  z-index: 3;
+  z-index: 1;
 }
 .marqueeContent {
   display: inline-flex;
